<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenupacientesActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="127dp"
        tools:layout_editor_absoluteY="-45dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">

        <TextView
            android:id="@+id/textViewPaciente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="70dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/textPaciente" />

        <TextView
            android:id="@+id/textViewNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="Nombre del Paciente: " />
        <TextView
            android:id="@+id/textViewRun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Run del Paciente: " />
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="2"
            android:rowCount="3"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="80dp"
            android:orientation="horizontal">

            <!-- Botón 1 -->
            <Button
                android:id="@+id/button1"
                android:layout_width="133dp"
                android:layout_height="97dp"
                android:text="@string/textFicha" />

            <!-- Botón 2 -->
            <Button
                android:id="@+id/buttonVCuidados"
                android:layout_width="133dp"
                android:layout_height="97dp"
                android:layout_marginTop="-6dp"
                android:layout_marginLeft="60dp"
                android:text="@string/textCui" />

            <!-- Botón 3 -->
            <Button
                android:id="@+id/button3"
                android:layout_width="133dp"
                android:layout_height="97dp"
                android:layout_margin="0dp"
                android:text="@string/textCui"/>

            <!-- Botón 4 -->
            <Button
                android:id="@+id/button4"
                android:layout_width="133dp"
                android:layout_height="97dp"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="60dp"
                android:text="@string/textComCui"/>

            <!-- Botón 5 -->
            <Button
                android:id="@+id/button5"
                android:layout_width="133dp"
                android:layout_height="97dp"
                android:layout_margin="0dp"
                android:text="@string/textEva"/>

            <!-- Botón 6 -->
            <Button
                android:id="@+id/button6"
                android:layout_width="133dp"
                android:layout_height="97dp"
                android:layout_marginTop="-6dp"
                android:layout_marginLeft="60dp"
                android:text="@string/textMRec"/>
        </GridLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>