<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AgregarMedicamento">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-100dp"
            android:layout_marginTop="50dp"
            android:text="Nombre del Paciente: " />

        <TextView
            android:id="@+id/textViewRun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-112dp"
            android:layout_marginTop="10dp"
            android:text="Run del Paciente: " />
        <!-- Texto explicativo -->
        <TextView
            android:id="@+id/textViewtextNomMed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-110dp"
            android:layout_marginTop="50dp"
            android:text="@string/textNomMed" />

        <!-- Cuadro de texto -->
        <EditText
            android:id="@+id/editTextNombreMed"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_below="@id/textViewExplicacion"
            android:layout_marginStart="-80dp"
            android:layout_marginTop="8dp"
            android:hint="Escribe aquí" />
        <GridLayout
            android:layout_width="360dp"
            android:layout_height="80dp"
            android:layout_marginLeft="10dp"
            android:columnCount="4"
            android:rowCount="2">

            <!-- Cuadro de texto -->
            <TextView
                android:id="@+id/textViewExplicacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:text="@string/textDosis" />

            <EditText
                android:id="@+id/editTextDosis"
                android:layout_width="122dp"
                android:layout_height="50dp"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_below="@id/textViewExplicacion"
                android:hint="aquí"
                android:inputType="number"/>
            <Spinner
                android:id="@+id/tipDosi"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:entries="@array/tipoDosi"
                android:spinnerMode="dialog" />

            <CheckBox
                android:id="@+id/checkBoxNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="3"
                android:text="@string/textNormal" />

            <CheckBox
                android:id="@+id/checkBoxAlta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_row="1"
                android:layout_column="2"
                android:text="@string/textAlta" />


        </GridLayout>
        <TextView
            android:id="@+id/textViewFormato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="-70dp"
            android:layout_marginTop="20dp"
            android:text="@string/textFormat"
            android:textSize="20sp"
            android:textStyle="bold" />
        <GridLayout
            android:layout_width="300dp"
            android:layout_height="160dp"
            android:layout_marginTop="20dp"
            android:columnCount="6"
            android:orientation="horizontal"
            android:rowCount="4">

            <!--Boton1-->
            <ImageView
                android:id="@+id/btnAddMed7"
                android:layout_width="47dp"
                android:layout_height="54dp"
                android:layout_row="0"
                android:layout_column="0"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/pastillas" />

            <CheckBox
                android:id="@+id/checkBoxPas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:text="@string/textPast" />

            <!--Boton2-->

            <ImageView
                android:id="@+id/img2"
                android:layout_width="47dp"
                android:layout_height="54dp"
                android:layout_row="1"
                android:layout_column="0"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/capsulas" />

            <CheckBox
                android:id="@+id/checkBoxCap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:text="@string/textCap" />

            <!--Boton3-->

            <ImageView
                android:id="@+id/img3"
                android:layout_width="47dp"
                android:layout_height="54dp"
                android:layout_row="2"
                android:layout_column="0"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/jarabe" />

            <ImageView
                android:id="@+id/img1"
                android:layout_width="47dp"
                android:layout_height="54dp"
                android:layout_row="0"
                android:layout_column="0"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/pastillas" />

            <CheckBox
                android:id="@+id/checkBoxJar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="1"
                android:text="@string/textJara" />

            <!--Boton4-->

            <ImageView
                android:id="@+id/img5"
                android:layout_width="47dp"
                android:layout_height="54dp"
                android:layout_row="1"
                android:layout_marginLeft="20dp"
                android:layout_column="3"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/gotas" />

            <CheckBox
                android:id="@+id/checkBoxGot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="4"
                android:text="@string/textGota" />

            <!--Boton5-->

            <!--Boton6-->
            <ImageView
                android:id="@+id/img4"
                android:layout_width="47dp"
                android:layout_height="54dp"
                android:layout_marginLeft="20dp"
                android:layout_row="0"
                android:layout_column="3"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/crema" />

            <CheckBox
                android:id="@+id/checkBoxCrem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="4"
                android:text="@string/textCre" />

            <ImageView
                android:id="@+id/img7"
                android:layout_width="47dp"
                android:layout_height="54dp"
                android:layout_row="2"
                android:layout_column="3"
                android:layout_marginLeft="20dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/inhalador" />

            <CheckBox
                android:id="@+id/checkBoxInha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="4"
                android:text="@string/textInha" />
        </GridLayout>
        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agregar" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>