<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Eliminar">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="127dp"
        tools:layout_editor_absoluteY="-45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eliminar2"
            android:textColor="#38197a"
            android:textSize="40sp"
            android:gravity="center"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_marginTop="15dp"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/basura"/>

        <EditText
            android:id="@+id/buscarElim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:hint="Ingrese RUT"
            android:inputType="number"></EditText>
        <Button
            android:id="@+id/btnDelete2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/eliminar"/>
        <Button
            android:id="@+id/btnMenu3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/irmenu"/>



    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>