<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="-16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:text="@string/menu"
            android:textSize="30sp"
            android:textColor="@color/purple_500"/>
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center">
            <ImageButton
                android:id="@+id/btnAdd"
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:layout_marginLeft="80dp"
                android:adjustViewBounds="true"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/mas" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="18sp"
                android:text="@string/agregarf"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center">
            <ImageButton
                android:id="@+id/btnPrint"
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:layout_marginLeft="80dp"
                android:adjustViewBounds="true"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/copia"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="18sp"
                android:text="@string/lista"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="80dp"
            android:gravity="center">
            <ImageButton
                android:id="@+id/btnEdit"
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:layout_marginLeft="80dp"
                android:adjustViewBounds="true"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/lapiz" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/editar"
                android:textSize="18sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center">
            <ImageButton
                android:id="@+id/btnDelete"
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:layout_marginLeft="80dp"
                android:adjustViewBounds="true"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/basura" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/eliminar2"
                android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="40dp"
            android:layout_height="80dp"
            android:gravity="center">
            <ImageButton
                android:id="@+id/btnInicio"
                android:layout_width="50dp"
                android:layout_height="100dp"
                android:layout_marginLeft="80dp"
                android:adjustViewBounds="true"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/atras" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/volverInicio"
                android:textSize="18sp"/>
        </LinearLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>