<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Medicamento">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="127dp"
        tools:layout_editor_absoluteY="-45dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="10dp">

        <TextView
            android:id="@+id/textViewPaciente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="-140dp"
            android:layout_marginTop="70dp"
            android:textSize="24sp"
            android:textColor="@color/purple_500"
            android:textStyle="bold"
            android:text="@string/textPaciente" />

        <TextView
            android:id="@+id/textViewNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-100dp"
            android:layout_marginTop="50dp"
            android:text="Nombre del Paciente: "
            android:textSize="18dp"
            android:textColor="@color/purple_500"/>
        <TextView
            android:id="@+id/textViewRun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-112dp"
            android:layout_marginTop="10dp"
            android:textSize="18dp"
            android:textColor="@color/purple_500"
            android:text="Run del Paciente: " />
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center">
            <ImageButton
                android:id="@+id/btnAddMed"
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:layout_marginLeft="80dp"
                android:adjustViewBounds="true"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/mas" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="18sp"
                android:text="@string/textAddMedi"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="80dp"
            android:gravity="center">
            <ImageButton
                android:id="@+id/btnEditMed"
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:layout_marginLeft="80dp"
                android:adjustViewBounds="true"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/lapiz" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/textEdiMedi"
                android:textSize="18sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center">
            <ImageButton
                android:id="@+id/btnPrintMed"
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:layout_marginLeft="80dp"
                android:adjustViewBounds="true"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/copia"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textSize="18sp"
                android:text="@string/textListMedi"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center">
            <ImageButton
                android:id="@+id/btnDelete"
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:layout_marginLeft="80dp"
                android:adjustViewBounds="true"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/basura" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/textDelMedi"
                android:textSize="18sp"/>
        </LinearLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>